--- a/index.html
+++ b/index.html
@@ -276,7 +276,8 @@
 
         // --- REGISTRO DEL SERVICE WORKER (Debe ir fuera del timeout para iniciar rápido) ---
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/service-worker.js')
+            // CORREGIDO: Usamos la ruta del repositorio
+            navigator.serviceWorker.register('/GuaraniConverter/service-worker.js')
                 .then((registration) => {
                     console.log('ServiceWorker registrado con éxito: ', registration.scope);
                 })
